--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "emailjs-com": "^3.2.0",
+    "i18next": "^22.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
